# chomper

./: .gdb_history  .gitignore  .gitmodules  Cargo.toml  Makefile  README  grust.lex  grust.rakumod  list-of-vendor-pkgs  scrape-these  tmp
chomper-derive/: Cargo.toml
chomper-imports/: Cargo.toml
chomper-imports/src/: lib.rs
chomper-oneshot/: Cargo.toml
chomper-oneshot/src/: cg.rs  cli_args.rs  debug.rs  example.rs  ffi.rs  first_attempt.rs  function.rs  imports.rs  lib.rs  main.rs  repos.rs
chomper-plugin/: Cargo.toml  ra_log.txt
chomper-plugin/src/: lib.rs
chomper2/: .gitignore  Cargo.toml  Makefile  test
chomper2/src/: adjust_range.rs  array_expr.rs  await_expr.rs  bin_expr.rs  block_expr.rs  box_expr.rs  break_expr.rs  call_expr.rs  cast_expr.rs  closure_expr.rs  continue_expr.rs  expr.rs  field_expr.rs  fix_array_expr.rs  fix_await_expr.rs  fix_bin_expr.rs  fix_block_expr.rs  fix_box_expr.rs  fix_break_expr.rs  fix_call_expr.rs  fix_cast_expr.rs  fix_closure_expr.rs  fix_continue_expr.rs  fix_field_expr.rs  fix_for_expr.rs  fix_if_expr.rs  fix_index_expr.rs  fix_let_expr.rs  fix_literal_expr.rs  fix_loop_expr.rs  fix_macro_expr.rs  fix_macro_stmts.rs  fix_match_expr.rs  fix_method_call_expr.rs  fix_paren_expr.rs  fix_path_expr.rs  fix_prefix_expr.rs  fix_range_expr.rs  fix_record_expr.rs  fix_ref_expr.rs  (+36 more)
lib/Chomper/: AbstractFunctions.rakumod  Args.rakumod  BlockComment.rakumod  BracedArrayLiteral.rakumod  Cargo.rakumod  CargoWorkspace.rakumod  Case.rakumod  CleanMacro.rakumod  Comments.rakumod  ConfigureImportsCrateDep.rakumod  ConstexprGlobals.rakumod  Constructor.rakumod  Cpp.rakumod  Crates.rakumod  CtorHeader.rakumod  DefaultInitializer.rakumod  Dequote.rakumod  Destructor.rakumod  DoxyComment.rakumod  EnumMembers.rakumod  ExtractOneWikiArticle.rakumod  Feedback.rakumod  FileSortUniq.rakumod  FormatName.rakumod  Formula.rakumod  FullEnum.rakumod  FullStruct.rakumod  Function.rakumod  FunctionDeclaration.rakumod  FunctionLocals.rakumod  GfunctionHeader.rakumod  Gjson.rakumod  GlobalSubparse.rakumod  Grammar.rakumod  Gtype.rakumod  Hasher.rakumod  Hungarian.rakumod  IsConst.rakumod  IsMut.rakumod  IsRef.rakumod  (+82 more)
lib/Chomper/Core/: AbstractFunctions.rakumod  AlignColumn.rakumod  Api.rakumod  AvoidKeywords.rakumod  BracedArrayLiteral.rakumod  CargoWorkspace.rakumod  Goodbye.rakumod  (+33 more)
old/: grust-anon-params.rakumod  grust-as-trait-ref.rakumod  grust-bindings.rakumod  grust-comment-alt.rakumod  grust-const-generics.rakumod  grust-crate.rakumod  grust-default-unsafe.rakumod  grust-expr-if-let.rakumod  grust-expr-loop.rakumod  grust-expr-no-struct.rakumod  grust-expr-no-struct.rakumod.old  grust-expr-qualified-path.rakumod  grust-expr-while.rakumod  grust-expr.rakumod  grust-extern-fn-item.rakumod  grust-for-in-type.rakumod  grust-foreign-fn.rakumod  grust-foreign-items.rakumod  grust-foreign-static.rakumod  grust-generic-args.rakumod  grust-idents-or-self.rakumod  grust-impl-type.rakumod  grust-item-const.rakumod  grust-item-enum.rakumod  grust-item-fn.rakumod  grust-item-macro.rakumod  grust-item-mod.rakumod  grust-item-trait.rakumod  grust-item-union.rakumod  grust-items.rakumod  grust-label.rakumod  grust-lifetimes.rakumod  grust-lit-or-path.rakumod  grust-lit-str.rakumod  grust-lit.rakumod  grust-lt-bounds.rakumod  grust-macro-expr.rakumod  grust-meta-item.rakumod  grust-meta-seq.rakumod  grust-mod-items.rakumod  (+19 more)
raku/: abstract_functions.rakumod  align.rakumod  antlr-actions-perl6.rakumod  antlr-grammar-parser.rakumod  antlr-grammar.rakumod  api.rakumod  args.rakumod  avoid-keywords.rakumod  block-comment.rakumod  caffe-workspace.rakumod  cargo-build-parser  cargo-workspace.rakumod  case.rakumod  comments.rakumod  constexpr_globals.rakumod  constructor.rakumod  cpp-actions.rakumod  cpp-cleaning.rakumod  cpp-model.rakumod  cpp-translate.rakumod  crates.rakumod  create-rust.rakumod  ctor_header.rakumod  default.rakumod  dequote.rakumod  destructor.rakumod  dot.rakumod  doxy-comment.rakumod  feedback.rakumod  format-textwidth.rakumod  formatting.rakumod  formula.rakumod  full_enum.rakumod  function-locals.rakumod  function-mappings  function.rakumod  gcpp-abstract-declarator.rakumod  gcpp-access.rakumod  gcpp-additive-expression.rakumod  gcpp-align.rakumod  (+466 more)
rust/: array-expression.rakumod  as-clause.rakumod  assignment-expression.rakumod  assoc-items.rakumod  attributes.rakumod  block-expressions.rakumod  borrow-expressions.rakumod  call-expressions.rakumod  cfg-attr.rakumod  closure-expressions.rakumod  comments.rakumod  comparison-expression.rakumod  configuration.rakumod  constants.rakumod  crate.rakumod  dereference-expression.rakumod  enumerations.rakumod  error-propagation.rakumod  expressions.rakumod  external-blocks.rakumod  field-expressions.rakumod  function-pointer-types.rakumod  functions.rakumod  generic-args.rakumod  generic-parameters.rakumod  grouped-expression.rakumod  identifiers.rakumod  if-expressions.rakumod  impl-trait.rakumod  inferred-type.rakumod  item.rakumod  keywords.rakumod  lifetimes.rakumod  literal-pattern.rakumod  literal.rakumod  loop-expression.rakumod  macros.rakumod  match-expressions.rakumod  meta-item.rakumod  module.rakumod  (+30 more)
src/: function.rs  imports.rs  lib.rs  lift_from_raku.rs
t/: gcpp.t  gpython-id.t  test  tgcpp.t
txt/: snake-cased.txt  snake-cased.txt.3  text-typemap.txt  whitelist.txt
u/: Python3.g4  add-border-line  check-lines-eliminated  clean-macro  cpp-translate  cpp14_lexer.g4  cpp14_parser.g4  create-title  create-workspace-crate  find-ix-nocrate  fix-package-structure  fix-use-statements  free-text-to-block-comment  generate-cargo-build-parser-class  generate-cpp-actions  generate-cpp-grammar  generate-cpp-model  generate-json-grammar  generate-rust-grammar  get-act  get-adj-file  get-rules  grust-from-antlr.rakumod  grust.rakumod  insert-ix  inspect-gcpp  json-parse  lazy-static-block  lc-all-caps-rules  line-comment-to-block-comment  parse-arm  parse-comment  pop-first-from-todo  port-test  process-formula  python-test  reformat-block-comment  rust-translate  rust.g4  scrape-camelcase-keywords  (+23 more)
(+226 files in other folders)
