[package]
name = "translator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[[bin]]
path = "src/lift_from_raku.rs"
name = "lift_from_raku"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#rustdoc-json-types-fork = "*"
rustdoc-types           = "*"
serde_json              = "*"
libc                    = "*"
lazy_static             = "*"
static_assertions       = "*"

ra_ap_base_db         = "0.0.121"
ra_ap_cfg             = "0.0.121"
ra_ap_flycheck        = "0.0.121"
ra_ap_hir             = "0.0.121"
ra_ap_hir_def         = "0.0.121"
ra_ap_hir_expand      = "0.0.121"
ra_ap_hir_ty          = "0.0.121"
ra_ap_ide             = "0.0.121"
ra_ap_ide_assists     = "0.0.121"
ra_ap_ide_completion  = "0.0.121"
ra_ap_ide_db          = "0.0.121"
ra_ap_ide_diagnostics = "0.0.121"
ra_ap_ide_ssr         = "0.0.121"
ra_ap_la-arena        = "0.0.121"
ra_ap_limit           = "0.0.121"
ra_ap_lsp-server      = "0.0.121"
ra_ap_mbe             = "0.0.121"
ra_ap_parser          = "0.0.121"
ra_ap_paths           = "0.0.121"
ra_ap_proc_macro_api  = "0.0.121"
ra_ap_proc_macro_srv  = "0.0.121"
ra_ap_profile         = "0.0.121"
ra_ap_project_model   = "0.0.121"
ra_ap_rust-analyzer   = "0.0.121"
ra_ap_sourcegen       = "0.0.121"
ra_ap_stdx            = "0.0.121"
ra_ap_syntax          = "0.0.121"
ra_ap_test_utils      = "0.0.121"
ra_ap_text_edit       = "0.0.121"
ra_ap_toolchain       = "0.0.121"
ra_ap_tt              = "0.0.121"
ra_ap_vfs             = "0.0.121"
ra_ap_vfs-notify      = "0.0.121"

[dependencies.clap]
features                = [ "derive" ]
