[dependencies.chomper-derive]
path = "../chomper-derive"
[dependencies.chomper-imports]
path = "../chomper-imports"

[dependencies]
serde_json   = "*"

[dependencies.clap]
features  = [ "derive" ]
version   = "*"

[lib]
crate-type = ["cdylib"]

[[bin]]
path = "src/main.rs"
name = "process_faulty_rust"

[package]
edition = "2021"
name = "chomper-oneshot"
version = "0.1.0"
