[package]
name = "chomper2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[dependencies]
tracing            = "*"
tracing-log        = "*"
tracing-subscriber = { version = "*", features = [ "env-filter" ] }

[dependencies.chomper-plugin]
version = "*"
path = "../chomper-plugin"

[dependencies.chomper-imports]
version = "*"
path = "../chomper-imports"

