[package]
name = "chomper2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[dependencies]
anyhow             = "*"
ctor               = "*"
rowan              = "*"
lazy_static        = "*"
libc               = "*"
log                = "*"
rustc-hash         = "*"
rustdoc-types      = "*"
serde_json         = "*"
static_assertions  = "*"
tracing            = { version = "*", default-features = false }
tracing-log        = "*"
tracing-subscriber = { version = "*", features = [ "env-filter" ] }

[dependencies.chomper-plugin]
version = "*"
path = "../chomper-plugin"

[dependencies.text-edit]
version = "*"
path = "../rust-analyzer/crates/text-edit"

[dependencies.syntax]
version = "*"
path = "../rust-analyzer/crates/syntax"

[dependencies.base-db]
version = "*"
path = "../rust-analyzer/crates/base-db"

[dependencies.hir-ty]
version = "*"
path = "../rust-analyzer/crates/hir-ty"

[dependencies.hir-def]
version = "*"
path = "../rust-analyzer/crates/hir-def"

[dependencies.parser]
version = "*"
path = "../rust-analyzer/crates/parser"

[dependencies.ide]
version = "*"
path = "../rust-analyzer/crates/ide"

[dependencies.rhai]
version = "*"
features = [ "no_std" ]

#tokio        = "*"
#tonic        = "*"
#tower        = "*"
#bytes        = "*"
#hyper        = "*"
#slab         = "*"
#socket2      = "*"
#futures      = "*"
#crossbeam      = "*"

#ra_ap_base_db         = "0.0.121"
#ra_ap_cfg             = "0.0.121"
#ra_ap_hir             = "0.0.121"
#ra_ap_hir_def         = "0.0.121"
#ra_ap_hir_expand      = "0.0.121"
#ra_ap_hir_ty          = "0.0.121"
#ra_ap_ide             = "0.0.121"
#ra_ap_ide_assists     = "0.0.121"
#ra_ap_ide_completion  = "0.0.121"
#ra_ap_ide_db          = "0.0.121"
#ra_ap_ide_diagnostics = "0.0.121"
#ra_ap_ide_ssr         = "0.0.121"
#ra_ap_limit           = "0.0.121"
#ra_ap_mbe             = "0.0.121"
#ra_ap_parser          = "0.0.121"
#ra_ap_paths           = "0.0.121"
#ra_ap_project_model   = "0.0.121"
#ra_ap_rust-analyzer   = "0.0.121"
#ra_ap_syntax          = "0.0.121"
#ra_ap_text_edit       = "0.0.121"
#ra_ap_vfs             = "0.0.121"
#ra_ap_vfs-notify      = "0.0.121"

